--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html lang="zh-tw">
     <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" integrity="sha256-aAr2Zpq8MZ+YA/D6JtRD3xtrwpEz2IqOS+pWD/7XKIw=" crossorigin="anonymous" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" integrity="sha256-2XFplPlrFClt0bIdPgpz8H7ojnk10H69xRqd9+uTShA=" crossorigin="anonymous" />
         <title>Dolleq</title>
     </head>
-    <body>
-
+    <body class="bg-warning">
+        <div class="container">
+            <div class="mt-5 mb-5 text-center">
+                <img src="logo.png" alt="dolleq" />
+            </div>
+            <div class="mb-5">
+                <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24;" href="https://www.ruten.com.tw/user/index00.php?s=dolleq"><i class="fas fa-store"></i> 露天拍賣</a>
+                <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24;" href="https://shopee.tw/dolleq"><i class="fas fa-store"></i> 蝦皮購物</a>
+                <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24;" href="https://www.youtube.com/c/dolleq"><i class="fab fa-youtube"></i> YouTube</a>
+                <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24;" href="https://www.instagram.com/dolleqworkshop/"><i class="fab fa-instagram"></i> Instagram</a>
+                <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24;" href="https://www.facebook.com/qr?id=564294773614229"><i class="fab fa-facebook"></i> Facebook</a>
+                <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24;" href="https://www.messenger.com/t/dolleq"><i class="fab fa-facebook-messenger"></i> Messenger</a>
+            </div>
+        </div>
     </body>
 </html>
