--- a/kcu/index.html
+++ b/kcu/index.html
@@ -14,10 +14,13 @@
             </div>
             <div class="mb-5 text-center" style="color: #6a3f24">
                 <h4>基隆社區大學 2020 秋季班</h4>
-                <h4>手作可動人偶與造型設計</h4>
-                <h4>報名資訊</h4>
+                <h4>《手作可動人偶與造型設計》</h4>
+            </div>
+            <div class="mb-5 text-center" style="color: #6a3f24">
+                <a role="button" class="btn btn-light btn-lg btn-block" style="color: #6a3f24" href="https://kcu.twcu.org.tw/course/"><i class="fas fa-user-plus"></i> 線上報名（限舊生）</a>
             </div>
             <div class="mb-5 text-center">
+                <h4 class="mb-5" style="color: #6a3f24">現場報名（新舊生皆可）：</h4>
                 <img src="chu-chheh.png" alt="註冊須知" class="img-fluid mb-5" />
                 <img src="si-kan-te-tiam.png" alt="時間地點" class="img-fluid" />
             </div>
