--- a/kcu/index.html
+++ b/kcu/index.html
@@ -16,6 +16,55 @@
                 <h4>基隆社區大學 2020 秋季班</h4>
                 <h4>《手作可動人偶與造型設計》</h4>
             </div>
+            <div class="jumbotron bg-light">
+                <p>※從基礎型材料包開始製作，沒經驗也可以上手</p>
+                <p>※星期六下午上課，適合上班族及學生</p>
+                <p>※社區大學沒有年齡限制，未滿18歲也可參加</p>
+                <p>🤔可動人偶是什麼？</p>
+                <p>它的正式名稱是「<a href="https://zh.wikipedia.org/zh-tw/%E7%90%83%E9%AB%94%E9%97%9C%E7%AF%80%E4%BA%BA%E5%BD%A2">球體關節人形</a>」（BJD），它的關節處有球型的機關。以鬆緊繩串連起來，就是一隻可動的人偶了！關節的設計使它可以靈活地擺動，因此，把玩性與自由度都很高！</p>
+                <p>🤔課程內容有什麼？</p>
+                <ul>
+                    <li>黏土雕塑技巧</li>
+                    <li>黏土打磨技巧</li>
+                    <li>上色塗裝技巧</li>
+                    <li>人偶服裝製作</li>
+                </ul>
+                <p>🤔課程結束會完成什麼作品？</p>
+                <ul>
+                    <li>1隻人偶</li>
+                    <li>2套服飾</li>
+                </ul>
+                <p>※<a href="https://www.facebook.com/dolleq/posts/3523555677688109">春季班同學的作品</a>（Facebook）</p>
+                <p>ℹ️課程資訊</p>
+                <ul>
+                    <li>上課日期：2020/10/10~2021/02/06，每週六上課，共18週</li>
+                    <li>上課時段：13:30 ~ 15:30</li>
+                    <li>上課地點：<a href="https://www.google.com.tw/maps/place/data=!3m1!4b1!4m5!3m4!1s0x345d4e3e94a78d55:0x14fad9d54879c697!8m2!3d25.1278698!4d121.7462697">仁愛國小</a>（基隆市仁二路139號．離廟口夜市走路3分鐘）</li>
+                    <li>上課費用：社大學分費2000 + 社大行政費（新生200‧舊生100）+ 材料費3000 + 冷氣費（如果有開的話）</li>
+                </ul>
+                <p>ℹ️外縣市交通資訊</p>
+                <ul>
+                    <li>市府轉運站搭乘2088客運，電力公司站下車步行約4分鐘</li>
+                    <li>台鐵於基隆站下車步行約13分鐘</li>
+                </ul>
+                <p>ℹ️報名地點及時間</p>
+                <ul>
+                    <li><a href="https://www.google.com.tw/maps/place/data=!3m1!4b1!4m5!3m4!1s0x0:0x5c8a8821cdf4ff04!8m2!3d25.1428127!4d121.7025938">武崙校本部</a>（基隆市基金二路3巷1號）：09/21~09/30（平日09:00~21:00）</li>
+                    <li><a href="https://www.google.com.tw/maps/place/data=!4m8!1m2!2m1!1z5Z-66ZqG5biC5pS_5bqc!3m4!1s0x345d4e3f8599bd77:0x43444b24fc47f0fa!8m2!3d25.1316201!4d121.7446471">基隆市政府</a>一樓服務中心：09/21~09/25（平日18:30~20:30）</li>
+                </ul>
+                <p>ℹ️外縣市至基隆市政府報名交通資訊</p>
+                <ul>
+                    <li>台北市區搭乘1579客運，市政府站下車即抵達</li>
+                    <li>台鐵於基隆站下車步行約11分鐘</li>
+                </ul>
+                <p>ℹ️外縣市至武崙校本部報名交通資訊</p>
+                <ul>
+                    <li>台北市區搭乘1815客運，大武崙站下車步行約4分鐘</li>
+                    <li>南港汐止搭乘9026客運，大武崙站下車步行約4分鐘</li>
+                </ul>
+                <p>※需要攜帶1吋照片1張、身分證正反面影本、學分費及行政費</p>
+                <p>報名程序問題請洽基隆社區大學：(02)24322699</p>
+            </div>
             <div class="mb-5 text-center" style="color: #6a3f24">
                 <a role="button" class="btn btn-light btn-lg btn-block" style="color: #6a3f24" href="https://kcu.twcu.org.tw/course/"><i class="fas fa-user-plus"></i> 線上報名（限舊生）</a>
             </div>
