--- a/kcu/index.html
+++ b/kcu/index.html
@@ -15,6 +15,7 @@
             <div class="mb-5 text-center" style="color: #6a3f24">
                 <h4>基隆社區大學 2020 秋季班</h4>
                 <h4>《手作可動人偶與造型設計》</h4>
+                <img class="mt-5 img-fluid" src="img1.jpg" alt="dolls">
             </div>
             <div class="jumbotron bg-light">
                 <p>※從基礎型材料包開始製作，沒經驗也可以上手</p>
