--- a/kcu/index.html
+++ b/kcu/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" /></noscript>
         <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" /></noscript>
-        <title>Dolleq</title>
+        <title>基隆社區大學2020秋季班《手作可動人偶與造型設計》報名資訊</title>
     </head>
     <body class="bg-warning">
         <div class="container">
