--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <img src="logo.png" alt="dolleq" />
             </div>
             <div class="mb-5">
-                <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24;" href="kcu"><i class="fas fa-school"></i> 基隆社大報名資訊</a>
+                <!-- <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24;" href="kcu"><i class="fas fa-school"></i> 基隆社大報名資訊</a> -->
                 <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24;" href="https://www.ruten.com.tw/user/index00.php?s=dolleq"><i class="fas fa-store"></i> 露天拍賣</a>
                 <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24;" href="https://shopee.tw/dolleq"><i class="fas fa-store"></i> 蝦皮購物</a>
                 <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24;" href="https://www.youtube.com/c/dolleq"><i class="fab fa-youtube"></i> YouTube</a>
