--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" /></noscript>
-        <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" /></noscript>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" />
         <title>Dolleq</title>
     </head>
     <body class="bg-warning">
@@ -18,6 +18,7 @@
                 <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24" href="https://www.youtube.com/c/dolleq"><i class="fab fa-youtube"></i> YouTube</a>
                 <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24" href="https://www.instagram.com/dolleqworkshop/"><i class="fab fa-instagram"></i> Instagram</a>
                 <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24" href="https://www.facebook.com/qr?id=564294773614229"><i class="fab fa-facebook"></i> Facebook</a>
+                <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24" href="https://twitter.com/dolleqworkshop"><i class="fab fa-twitter"></i> Twitter</a>
                 <h1 class="mt-4 display-4 text-white">MESSAGE</h1>
                 <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24" href="https://www.messenger.com/t/dolleq"><i class="fab fa-facebook-messenger"></i> Messenger</a>
                 <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24" href="https://line.me/R/ti/p/%40345aqamv"><i class="fab fa-line"></i> Line</a>
@@ -26,7 +27,7 @@
                 <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24" href="https://shopee.tw/dolleq"><i class="fas fa-store"></i> 蝦皮購物</a>
             </div>
         </div>
-        <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" />
-        <link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" />
+        <!-- <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" /> -->
+        <!-- <link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" /> -->
     </body>
 </html>
