--- a/index.html
+++ b/index.html
@@ -1,33 +1,38 @@
 <!DOCTYPE html>
-<html lang="zh-tw">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" />
-        <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" /></noscript>
-        <title>Dolleq</title>
-    </head>
-    <body class="bg-warning">
-        <div class="container">
-            <div class="mt-4 text-center">
-                <img src="logo.png" alt="dolleq" srcset="logo.png, logo-2x.png 2x" />
-            </div>
-            <div class="mb-5">
-                <!-- <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24" href="kcu"><i class="fas fa-school"></i> 基隆社大報名資訊</a> -->
-                <h1 class="mt-4 display-4 text-white">SOCIAL MEDIA</h1>
-                <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24" href="https://www.youtube.com/c/dolleq"><i class="fab fa-youtube"></i> YouTube</a>
-                <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24" href="https://www.instagram.com/dolleqworkshop/"><i class="fab fa-instagram"></i> Instagram</a>
-                <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24" href="https://www.facebook.com/qr?id=564294773614229"><i class="fab fa-facebook"></i> Facebook</a>
-                <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24" href="https://twitter.com/dolleqworkshop"><i class="fab fa-twitter"></i> Twitter</a>
-                <h1 class="mt-4 display-4 text-white">MESSAGE</h1>
-                <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24" href="https://www.messenger.com/t/dolleq"><i class="fab fa-facebook-messenger"></i> Messenger</a>
-                <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24" href="https://line.me/R/ti/p/%40345aqamv"><i class="fab fa-line"></i> Line</a>
-                <h1 class="mt-4 display-4 text-white">SHOP</h1>
-                <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24" href="https://www.ruten.com.tw/user/index00.php?s=dolleq"><i class="fas fa-store"></i> 露天拍賣</a>
-                <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24" href="https://shopee.tw/dolleq"><i class="fas fa-store"></i> 蝦皮購物</a>
-            </div>
-        </div>
-        <!-- <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" /> -->
-        <link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" />
-    </body>
+<html lang="zh-Hant-TW">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta
+      name="description"
+      content="We make BJDs and tutorials for making dolls.
+        我們製作 BJD 和做娃的教學。"
+    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" />
+    <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" /></noscript>
+    <title>Dolleq</title>
+  </head>
+  <body class="bg-warning">
+    <div class="container">
+      <div class="mt-4 text-center">
+        <img src="logo.png" alt="dolleq" srcset="logo.png, logo-2x.png 2x" />
+      </div>
+      <div class="mb-5">
+        <!-- <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24" href="kcu"><i class="fas fa-school"></i> 基隆社大報名資訊</a> -->
+        <h1 class="mt-4 display-4 text-white">SOCIAL MEDIA</h1>
+        <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24" href="https://www.youtube.com/dolleq"><i class="fab fa-youtube"></i> YouTube</a>
+        <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24" href="https://www.instagram.com/dolleqworkshop/"><i class="fab fa-instagram"></i> Instagram</a>
+        <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24" href="https://www.facebook.com/qr?id=564294773614229"><i class="fab fa-facebook"></i> Facebook</a>
+        <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24" href="https://twitter.com/dolleqworkshop"><i class="fab fa-twitter"></i> Twitter</a>
+        <h1 class="mt-4 display-4 text-white">MESSAGE</h1>
+        <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24" href="https://www.messenger.com/t/dolleq"><i class="fab fa-facebook-messenger"></i> Messenger</a>
+        <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24" href="https://line.me/R/ti/p/%40345aqamv"><i class="fab fa-line"></i> Line</a>
+        <h1 class="mt-4 display-4 text-white">SHOP</h1>
+        <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24" href="https://www.ruten.com.tw/store/dolleq"><i class="fas fa-store"></i> 露天拍賣</a>
+        <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24" href="https://shopee.tw/dolleq"><i class="fas fa-store"></i> 蝦皮購物</a>
+      </div>
+    </div>
+    <!-- <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" /> -->
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" />
+  </body>
 </html>
