--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body class="bg-warning">
     <div class="container">
       <div class="mt-4 text-center">
-        <img src="logo.png" alt="dolleq" srcset="logo.png, logo-2x.png 2x" />
+        <img src="logo.png" alt="dolleq" width="100px" height="50px" srcset="logo.png, logo-2x.png 2x" />
       </div>
       <div class="mb-5">
         <!-- <a role="button" class="mb-3 btn btn-light btn-lg btn-block" style="color: #6a3f24" href="kcu"><i class="fas fa-school"></i> 基隆社大報名資訊</a> -->
