--- a/index.html
+++ b/index.html
@@ -24,75 +24,64 @@
   </head>
 
   <body style="background-color: #ffc72c">
-    <header class="container">
-      <h1 class="mt-4 mb-3 text-center">
-        <img src="logo.png" width="100px" height="50px" srcset="logo.png, logo-2x.png 2x" alt="Dolleq" />
-      </h1>
-    </header>
+    <div class="container">
+      <header>
+        <h1 class="mt-4 mb-3 text-center">
+          <img src="logo.png" width="100px" height="50px" srcset="logo.png, logo-2x.png 2x" alt="Dolleq" />
+        </h1>
+      </header>
 
-    <div class="container d-none d-md-block carousel slide carousel-fade" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="katiat-enghim.jpg" class="w-100" alt="Katiat and Enghim" />
-        </div>
-        <div class="carousel-item">
-          <img src="enghim.jpg" class="w-100" alt="Enghim" />
-        </div>
-        <div class="carousel-item">
-          <img src="katiat.jpg" class="w-100" alt="Katiat" />
+      <div class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="katiat-enghim.jpg" class="w-100" alt="Katiat and Enghim" />
+          </div>
+          <div class="carousel-item">
+            <img src="enghim.jpg" class="w-100" alt="Enghim" />
+          </div>
+          <div class="carousel-item">
+            <img src="katiat.jpg" class="w-100" alt="Katiat" />
+          </div>
         </div>
       </div>
+
+      <main <article class="mt-2 text-center fs-6" style="color: #6a3f24">
+        <article>
+          <div>We make BJDs and tutorials for making dolls</div>
+          <div>我們製作 BJD 和做娃的教學</div>
+        </article>
+
+        <div>
+          <h2 class="mt-4 text-white"><span class="display-4">Social Media</span><span> 社群媒體</span></h2>
+
+          <div class="d-grid gap-2 d-md-block">
+            <a role="button" class="btn btn-light btn-lg" style="color: #6a3f24" href="https://www.youtube.com/dolleq"><i class="fab fa-youtube"></i> YouTube</a>
+            <a role="button" class="btn btn-light btn-lg" style="color: #6a3f24" href="https://www.instagram.com/dolleqworkshop/"><i class="fab fa-instagram"></i> Instagram</a>
+            <a role="button" class="btn btn-light btn-lg" style="color: #6a3f24" href="https://www.facebook.com/qr?id=564294773614229"><i class="fab fa-facebook"></i> Facebook</a>
+            <a role="button" class="btn btn-light btn-lg" style="color: #6a3f24" href="https://twitter.com/dolleqworkshop"><i class="fab fa-twitter"></i> Twitter</a>
+          </div>
+
+          <h2 class="mt-4 text-white"><span class="display-4">Shop</span><span> 商店</span></h2>
+
+          <div class="d-grid gap-2 d-md-block">
+            <a role="button" class="btn btn-light btn-lg" style="color: #6a3f24" href="https://www.ruten.com.tw/store/dolleq"><i class="fas fa-store"></i> 露天拍賣</a>
+            <a role="button" class="btn btn-light btn-lg" style="color: #6a3f24" href="https://shopee.tw/dolleq"><i class="fas fa-store"></i> 蝦皮購物</a>
+          </div>
+
+          <h2 class="mt-4 text-white"><span class="display-4">Contact</span><span> 聯絡</span></h2>
+
+          <div class="d-grid gap-2 d-md-block">
+            <a role="button" class="btn btn-light btn-lg" style="color: #6a3f24" href="https://www.messenger.com/t/dolleq"><i class="fab fa-facebook-messenger"></i> Messenger</a>
+            <a role="button" class="btn btn-light btn-lg" style="color: #6a3f24" href="https://line.me/R/ti/p/%40345aqamv"><i class="fab fa-line"></i> Line</a>
+          </div>
+        </div>
+
+        <footer class="mb-5"></footer>
+      </main>
+
+      <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" />
+      <link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" />
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     </div>
-
-    <div class="d-block d-md-none carousel slide carousel-fade" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="katiat-enghim.jpg" class="w-100" alt="Katiat and Enghim" />
-        </div>
-        <div class="carousel-item">
-          <img src="enghim.jpg" class="w-100" alt="Enghim" />
-        </div>
-        <div class="carousel-item">
-          <img src="katiat.jpg" class="w-100" alt="Katiat" />
-        </div>
-      </div>
-    </div>
-
-    <main class="container">
-      <article class="mt-2 text-center fs-6" style="color: #6a3f24">
-        <div>We make BJDs and tutorials for making dolls</div>
-        <div>我們製作 BJD 和做娃的教學</div>
-      </article>
-
-      <div>
-        <h2 class="mt-4 text-white"><span class="display-4">Social Media</span><span> 社群媒體</span></h2>
-
-        <div class="d-grid gap-2 d-md-block">
-          <a role="button" class="btn btn-light btn-lg" style="color: #6a3f24" href="https://www.youtube.com/dolleq"><i class="fab fa-youtube"></i> YouTube</a>
-          <a role="button" class="btn btn-light btn-lg" style="color: #6a3f24" href="https://www.instagram.com/dolleqworkshop/"><i class="fab fa-instagram"></i> Instagram</a>
-          <a role="button" class="btn btn-light btn-lg" style="color: #6a3f24" href="https://www.facebook.com/qr?id=564294773614229"><i class="fab fa-facebook"></i> Facebook</a>
-          <a role="button" class="btn btn-light btn-lg" style="color: #6a3f24" href="https://twitter.com/dolleqworkshop"><i class="fab fa-twitter"></i> Twitter</a>
-        </div>
-
-        <h2 class="mt-4 text-white"><span class="display-4">Shop</span><span> 商店</span></h2>
-
-        <div class="d-grid gap-2 d-md-block">
-          <a role="button" class="btn btn-light btn-lg" style="color: #6a3f24" href="https://www.ruten.com.tw/store/dolleq"><i class="fas fa-store"></i> 露天拍賣</a>
-          <a role="button" class="btn btn-light btn-lg" style="color: #6a3f24" href="https://shopee.tw/dolleq"><i class="fas fa-store"></i> 蝦皮購物</a>
-        </div>
-
-        <h2 class="mt-4 text-white"><span class="display-4">Contact</span><span> 聯絡</span></h2>
-
-        <div class="d-grid gap-2 d-md-block">
-          <a role="button" class="btn btn-light btn-lg" style="color: #6a3f24" href="https://www.messenger.com/t/dolleq"><i class="fab fa-facebook-messenger"></i> Messenger</a>
-          <a role="button" class="btn btn-light btn-lg" style="color: #6a3f24" href="https://line.me/R/ti/p/%40345aqamv"><i class="fab fa-line"></i> Line</a>
-        </div>
-      </div>
-      <footer class="mb-5"></footer>
-    </main>
-
-    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" />
-    <link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
