--- a/index.html
+++ b/index.html
@@ -5,18 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="We make BJDs and tutorials for making dolls
-        我們製作 BJD 和做娃的教學"
+      content="We make BJDs and tutorials for making dolls. 我們製作 BJD 和做娃的教學。"
     />
     <meta name="theme-color" content="#ffc72c" />
     <meta property="og:title" content="Dolleq" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://dolleq.com" />
-    <meta property="og:image" content="katiat-enghim.jpg" />
+    <meta property="og:image" content="https://dolleq.com/katiat-enghim.jpg" />
     <meta
       property="og:description"
-      content="We make BJDs and tutorials for making dolls
-    我們製作 BJD 和做娃的教學"
+      content="We make BJDs and tutorials for making dolls. 我們製作 BJD 和做娃的教學。"
     />
     <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" /></noscript>
     <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" /></noscript>
@@ -34,13 +32,13 @@
       <div class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="katiat-enghim.jpg" class="w-100" alt="Katiat and Enghim" />
+            <img src="katiat-enghim.jpg" class="w-100" alt="Katiat and Enghim the Ball-jointed dolls" />
           </div>
           <div class="carousel-item">
-            <img src="enghim.jpg" class="w-100" alt="Enghim" />
+            <img src="enghim.jpg" class="w-100" alt="Enghim the Ball-jointed doll" />
           </div>
           <div class="carousel-item">
-            <img src="katiat.jpg" class="w-100" alt="Katiat" />
+            <img src="katiat.jpg" class="w-100" alt="Katiat the Ball-jointed doll" />
           </div>
         </div>
       </div>
