--- a/index.html
+++ b/index.html
@@ -1,85 +1,109 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="We make BJDs and tutorials for making dolls. 我們製作 BJD 和做娃的教學。"
-    />
-    <meta name="theme-color" content="#ffc72c" />
-    <meta property="og:title" content="Dolleq" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://dolleq.com" />
-    <meta property="og:image" content="https://dolleq.com/katiat-enghim.jpg" />
-    <meta
-      property="og:description"
-      content="We make BJDs and tutorials for making dolls. 我們製作 BJD 和做娃的教學。"
-    />
-    <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" /></noscript>
-    <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" /></noscript>
-    <title>Dolleq</title>
-  </head>
 
-  <body style="background-color: #ffc72c">
-    <div class="container">
-      <header>
-        <h1 class="mt-4 mb-3 text-center">
-          <img src="logo.png" width="100px" height="50px" srcset="logo.png, logo-2x.png 2x" alt="Dolleq" />
-        </h1>
-      </header>
+<head>
+  <meta charset="utf-8" />
+  <title>Dolleq - Ball-jointed Doll 球體關節人形</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Dolleq creates ball-jointed dolls and tutorials. Dolleq 提供球體關節人形創作和教學。" />
+  <meta name="theme-color" content="#ffc72c" />
+  <meta property="og:title" content="Dolleq" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://dolleq.com" />
+  <meta property="og:image" content="https://dolleq.com/katiat-enghim.jpg" />
+  <meta property="og:description" content="Dolleq creates ball-jointed dolls and tutorials. Dolleq 提供球體關節人形創作和教學。" />
+  <noscript>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" />
+  </noscript>
+  <link rel="stylesheet" href="style.css">
+</head>
 
-      <div class="carousel slide carousel-fade" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="katiat-enghim.jpg" class="w-100" alt="Katiat and Enghim the Ball-jointed dolls" />
-          </div>
-          <div class="carousel-item">
-            <img src="enghim.jpg" class="w-100" alt="Enghim the Ball-jointed doll" />
-          </div>
-          <div class="carousel-item">
-            <img src="katiat.jpg" class="w-100" alt="Katiat the Ball-jointed doll" />
-          </div>
-        </div>
+<body class="body container fs-6 text-center">
+
+  <header>
+    <h1>
+      <img class="mt-3" src="logo.png" width="100px" height="50px" srcset="logo.png, logo-2x.png 2x" alt="Dolleq" />
+      <div class="mt-2 fs-6">Ball-jointed Doll 球體關節人形</div>
+    </h1>
+  </header>
+
+  <div class="carousel slide carousel-fade mt-3" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <picture>
+          <source srcset="katiat-enghim.avif">
+          <img src="katiat-enghim.jpg" class="w-100" decoding="async" loading="lazy"
+            alt="Katiat and Enghim the Ball-jointed dolls" />
+        </picture>
+      </div>
+      <div class="carousel-item">
+        <picture>
+          <source srcset="enghim.avif">
+          <img src="enghim.jpg" class="w-100" decoding="async" loading="lazy" alt="Enghim the Ball-jointed doll" />
+        </picture>
+      </div>
+      <div class="carousel-item">
+        <picture>
+          <source srcset="katiat.avif">
+          <img src="katiat.jpg" class="w-100" decoding="async" loading="lazy" alt="Katiat the Ball-jointed doll" />
+        </picture>
+      </div>
+    </div>
+  </div>
+
+  <main>
+
+    <article class="mt-3">
+      <div lang="en">Dolleq creates ball-jointed dolls and tutorials</div>
+      <div>Dolleq 提供球體關節人形創作和教學</div>
+    </article>
+
+    <div>
+      <div class="mt-4 fs-3 text-white"><span lang="en">Contact</span> 聯絡</div>
+      <div class="d-grid gap-2 d-md-block">
+        <a role="button" class="btn btn-light btn-lg" href="https://www.messenger.com/t/dolleq"><i
+            class="fa-brands fa-facebook-messenger"></i> Messenger</a>
+        <a role="button" class="btn btn-light btn-lg" href="https://line.me/R/ti/p/%40345aqamv"><i
+            class="fa-brands fa-line"></i> LINE</a>
       </div>
 
-      <main <article class="mt-2 text-center fs-6" style="color: #6a3f24">
-        <article>
-          <div>We make BJDs and tutorials for making dolls</div>
-          <div>我們製作 BJD 和做娃的教學</div>
-        </article>
+      <div class="mt-4 fs-3 text-white"><span lang="en">Social Media</span> 社群媒體</div>
+      <div class="d-grid gap-2 d-md-block">
+        <a role="button" class="btn btn-light btn-lg" href="https://www.youtube.com/dolleq"><i
+            class="fa-brands fa-youtube"></i> YouTube</a>
+        <a role="button" class="btn btn-light btn-lg" href="https://www.instagram.com/dolleqworkshop/"><i
+            class="fa-brands fa-instagram"></i> Instagram</a>
+        <a role="button" class="btn btn-light btn-lg" href="https://www.facebook.com/qr?id=564294773614229"><i
+            class="fa-brands fa-facebook"></i> Facebook</a>
+        <a role="button" class="btn btn-light btn-lg" href="https://twitter.com/dolleqworkshop"><i
+            class="fa-brands fa-twitter"></i> Twitter</a>
+        <a role="button" class="btn btn-light btn-lg" href="https://www.behance.net/zincaluminum"><i
+            class="fa-brands fa-behance"></i> Behance</a>
+      </div>
 
-        <div>
-          <h2 class="mt-4 text-white"><span class="display-4">Social Media</span><span> 社群媒體</span></h2>
+      <div class="mt-4 fs-3 text-white"><span lang="en">Shop</span> 商店</div>
+      <div class="d-grid gap-2 d-md-block  ">
+        <a role="button" class="btn btn-light btn-lg" href="https://www.ruten.com.tw/store/dolleq">露天拍賣</a>
+        <a role="button" class="btn btn-light btn-lg" href="https://shopee.tw/dolleq">蝦皮購物</a>
+      </div>
 
-          <div class="d-grid gap-2 d-md-block">
-            <a role="button" class="btn btn-light btn-lg" style="color: #6a3f24" href="https://www.youtube.com/dolleq"><i class="fab fa-youtube"></i> YouTube</a>
-            <a role="button" class="btn btn-light btn-lg" style="color: #6a3f24" href="https://www.instagram.com/dolleqworkshop/"><i class="fab fa-instagram"></i> Instagram</a>
-            <a role="button" class="btn btn-light btn-lg" style="color: #6a3f24" href="https://www.facebook.com/qr?id=564294773614229"><i class="fab fa-facebook"></i> Facebook</a>
-            <a role="button" class="btn btn-light btn-lg" style="color: #6a3f24" href="https://twitter.com/dolleqworkshop"><i class="fab fa-twitter"></i> Twitter</a>
-          </div>
+      <div class="mt-4 fs-3 text-white"><span lang="en">Commission</span> 委託</div>
+      <div class="d-grid gap-2 d-md-block  ">
+        <a role="button" class="btn btn-light btn-lg" href="https://clibo.tw/users/w2dCr4">Clibo</a>
+      </div>
 
-          <h2 class="mt-4 text-white"><span class="display-4">Shop</span><span> 商店</span></h2>
-
-          <div class="d-grid gap-2 d-md-block">
-            <a role="button" class="btn btn-light btn-lg" style="color: #6a3f24" href="https://www.ruten.com.tw/store/dolleq"><i class="fas fa-store"></i> 露天拍賣</a>
-            <a role="button" class="btn btn-light btn-lg" style="color: #6a3f24" href="https://shopee.tw/dolleq"><i class="fas fa-store"></i> 蝦皮購物</a>
-          </div>
-
-          <h2 class="mt-4 text-white"><span class="display-4">Contact</span><span> 聯絡</span></h2>
-
-          <div class="d-grid gap-2 d-md-block">
-            <a role="button" class="btn btn-light btn-lg" style="color: #6a3f24" href="https://www.messenger.com/t/dolleq"><i class="fab fa-facebook-messenger"></i> Messenger</a>
-            <a role="button" class="btn btn-light btn-lg" style="color: #6a3f24" href="https://line.me/R/ti/p/%40345aqamv"><i class="fab fa-line"></i> Line</a>
-          </div>
-        </div>
-
-        <footer class="mb-5"></footer>
-      </main>
-
-      <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" />
-      <link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" />
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     </div>
-  </body>
+  </main>
+
+  <footer class="mt-5"></footer>
+
+  <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" as="style"
+    onload="this.onload=null;this.rel='stylesheet'" />
+  <link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" as="style"
+    onload="this.onload=null;this.rel='stylesheet'" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+</body>
+
 </html>
