--- a/index.html
+++ b/index.html
@@ -33,20 +33,19 @@
       <div class="carousel-item active">
         <picture>
           <source srcset="katiat-enghim.avif">
-          <img src="katiat-enghim.jpg" class="w-100" decoding="async" loading="lazy"
-            alt="Katiat and Enghim the Ball-jointed dolls" />
+          <img src="katiat-enghim.jpg" width="100%" alt="Katiat and Enghim the Ball-jointed dolls" />
         </picture>
       </div>
       <div class="carousel-item">
         <picture>
           <source srcset="enghim.avif">
-          <img src="enghim.jpg" class="w-100" decoding="async" loading="lazy" alt="Enghim the Ball-jointed doll" />
+          <img src="enghim.jpg" width="100%" alt="Enghim the Ball-jointed doll" />
         </picture>
       </div>
       <div class="carousel-item">
         <picture>
           <source srcset="katiat.avif">
-          <img src="katiat.jpg" class="w-100" decoding="async" loading="lazy" alt="Katiat the Ball-jointed doll" />
+          <img src="katiat.jpg" width="100%" alt="Katiat the Ball-jointed doll" />
         </picture>
       </div>
     </div>
