--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
   <meta property="og:url" content="https://dolleq.com" />
   <meta property="og:image" content="https://dolleq.com/katiat-enghim.jpg" />
   <meta property="og:description" content="Dolleq creates ball-jointed dolls and tutorials. Dolleq 提供球體關節人形創作和教學。" />
-  <noscript>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" />
-  </noscript>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" />
 </head>
 
 <body class="body container fs-6 text-center">
@@ -33,19 +31,19 @@
       <div class="carousel-item active">
         <picture>
           <source srcset="katiat-enghim.avif">
-          <img src="katiat-enghim.jpg" width="100%" height="auto" alt="Katiat and Enghim the Ball-jointed dolls" />
+          <img src="katiat-enghim.jpg" width="100%" alt="Katiat and Enghim the Ball-jointed dolls" />
         </picture>
       </div>
       <div class="carousel-item">
         <picture>
           <source srcset="enghim.avif">
-          <img src="enghim.jpg" width="100%" height="auto" alt="Enghim the Ball-jointed doll" />
+          <img src="enghim.jpg" width="100%" alt="Enghim the Ball-jointed doll" />
         </picture>
       </div>
       <div class="carousel-item">
         <picture>
           <source srcset="katiat.avif">
-          <img src="katiat.jpg" width="100%" height="auto" alt="Katiat the Ball-jointed doll" />
+          <img src="katiat.jpg" width="100%" alt="Katiat the Ball-jointed doll" />
         </picture>
       </div>
     </div>
@@ -97,10 +95,10 @@
 
   <footer class="mt-5"></footer>
 
-  <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" as="style"
+  <!-- <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" as="style"
     onload="this.onload=null;this.rel='stylesheet'" />
   <link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" as="style"
-    onload="this.onload=null;this.rel='stylesheet'" />
+    onload="this.onload=null;this.rel='stylesheet'" /> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
