--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <meta property="og:description" content="Dolleq creates ball-jointed dolls and tutorials. Dolleq 提供球體關節人形創作和教學。" />
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" />
+  <noscript>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" />
+  </noscript>
 </head>
 
 <body class="body container fs-6 text-center">
@@ -57,7 +59,7 @@
     </article>
 
     <div>
-      <div class="mt-4 fs-3 text-white"><span lang="en">Contact</span> 聯絡</div>
+      <div class="mt-4 fs-3"><span lang="en">Contact</span> 聯絡</div>
       <div class="d-grid gap-2 d-md-block">
         <a role="button" class="btn btn-light btn-lg" href="https://www.messenger.com/t/dolleq"><i
             class="fa-brands fa-facebook-messenger"></i> Messenger</a>
@@ -65,7 +67,7 @@
             class="fa-brands fa-line"></i> LINE</a>
       </div>
 
-      <div class="mt-4 fs-3 text-white"><span lang="en">Social Media</span> 社群媒體</div>
+      <div class="mt-4 fs-3"><span lang="en">Social Media</span> 社群媒體</div>
       <div class="d-grid gap-2 d-md-block">
         <a role="button" class="btn btn-light btn-lg" href="https://www.youtube.com/dolleq"><i
             class="fa-brands fa-youtube"></i> YouTube</a>
@@ -79,13 +81,13 @@
             class="fa-brands fa-behance"></i> Behance</a>
       </div>
 
-      <div class="mt-4 fs-3 text-white"><span lang="en">Shop</span> 商店</div>
+      <div class="mt-4 fs-3"><span lang="en">Shop</span> 商店</div>
       <div class="d-grid gap-2 d-md-block  ">
         <a role="button" class="btn btn-light btn-lg" href="https://www.ruten.com.tw/store/dolleq">露天拍賣</a>
         <a role="button" class="btn btn-light btn-lg" href="https://shopee.tw/dolleq">蝦皮購物</a>
       </div>
 
-      <div class="mt-4 fs-3 text-white"><span lang="en">Commission</span> 委託</div>
+      <div class="mt-4 fs-3"><span lang="en">Commission</span> 委託</div>
       <div class="d-grid gap-2 d-md-block  ">
         <a role="button" class="btn btn-light btn-lg" href="https://clibo.tw/users/w2dCr4">Clibo</a>
       </div>
@@ -93,12 +95,14 @@
     </div>
   </main>
 
-  <footer class="mt-5"></footer>
+  <footer class="mt-5 mb-5">
+    <div>
+      © Dolleq. Based in Keelung.
+      </div>
+  </footer>
 
-  <!-- <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" as="style"
-    onload="this.onload=null;this.rel='stylesheet'" />
   <link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" as="style"
-    onload="this.onload=null;this.rel='stylesheet'" /> -->
+    onload="this.onload=null;this.rel='stylesheet'" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
