--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             class="fa-brands fa-youtube"></i> YouTube</a>
         <a role="button" class="btn btn-light btn-lg" href="https://www.instagram.com/dolleqworkshop/"><i
             class="fa-brands fa-instagram"></i> Instagram</a>
-        <a role="button" class="btn btn-light btn-lg" href="https://www.facebook.com/qr?id=564294773614229"><i
+        <a role="button" class="btn btn-light btn-lg" href="https://facebook.com/qr?id=564294773614229"><i
             class="fa-brands fa-facebook"></i> Facebook</a>
         <a role="button" class="btn btn-light btn-lg" href="https://twitter.com/dolleqworkshop"><i
             class="fa-brands fa-twitter"></i> Twitter</a>
