--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Dolleq - Ball-jointed Doll 球體關節人形</title>
+  <title>Dolleq 球體關節人形</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Dolleq creates ball-jointed dolls and tutorials. Dolleq 提供球體關節人形創作和教學。" />
   <meta name="theme-color" content="#ffc72c" />
@@ -24,7 +24,7 @@
   <header>
     <h1>
       <img class="mt-4" src="logo.png" width="100px" height="50px" srcset="logo.png, logo-2x.png 2x" alt="Dolleq" />
-      <div class="mt-2 fs-6">Ball-jointed Doll 球體關節人形</div>
+      <div class="mt-2 fs-6">Dolleq 球體關節人形</div>
     </h1>
   </header>
 
@@ -73,7 +73,7 @@
             class="fa-brands fa-youtube"></i> YouTube</a>
         <a role="button" class="btn btn-light btn-lg" href="https://www.instagram.com/dolleqworkshop/"><i
             class="fa-brands fa-instagram"></i> Instagram</a>
-        <a role="button" class="btn btn-light btn-lg" href="https://facebook.com/qr?id=564294773614229"><i
+        <a role="button" class="btn btn-light btn-lg" href="https://facebook.com/qr?id=100064126143922"><i
             class="fa-brands fa-facebook"></i> Facebook</a>
         <a role="button" class="btn btn-light btn-lg" href="https://twitter.com/dolleqworkshop"><i
             class="fa-brands fa-twitter"></i> Twitter</a>
