--- a/index.html
+++ b/index.html
@@ -1,110 +1,71 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
+  <head>
+    <meta charset="utf-8" />
+    <title>Dolleq - BJD 球體關節人形</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Dolleq creates ball-jointed dolls and tutorials. Dolleq 提供球體關節人形創作和教學。" />
+    <meta name="theme-color" content="#ffc72c" />
+    <meta property="og:title" content="Dolleq" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dolleq.com" />
+    <meta property="og:image" content="https://dolleq.com/katiat-enghim.jpg" />
+    <meta property="og:description" content="Dolleq creates ball-jointed dolls and tutorials. Dolleq 提供球體關節人形創作和教學。" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/fontawesome.min.css" />
+    <link rel="stylesheet" href="css/brands.min.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <title>Dolleq 球體關節人形</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Dolleq creates ball-jointed dolls and tutorials. Dolleq 提供球體關節人形創作和教學。" />
-  <meta name="theme-color" content="#ffc72c" />
-  <meta property="og:title" content="Dolleq" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://dolleq.com" />
-  <meta property="og:image" content="https://dolleq.com/katiat-enghim.jpg" />
-  <meta property="og:description" content="Dolleq creates ball-jointed dolls and tutorials. Dolleq 提供球體關節人形創作和教學。" />
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" />
-  <noscript>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" />
-  </noscript>
-</head>
+  <body class="body container fs-6 text-center">
+    <header>
+      <h1>
+        <img class="mt-4" src="logo.png" width="100px" height="50px" srcset="logo.png, logo-2x.png 2x" alt="Dolleq" />
+      </h1>
+    </header>
 
-<body class="body container fs-6 text-center">
+    <main>
+      <picture class="mt-3">
+        <source srcset="katiat-enghim.avif" />
+        <img src="katiat-enghim.jpg" width="100%" alt="Katiat and Enghim the Ball-jointed dolls" />
+      </picture>
 
-  <header>
-    <h1>
-      <img class="mt-4" src="logo.png" width="100px" height="50px" srcset="logo.png, logo-2x.png 2x" alt="Dolleq" />
-      <div class="mt-2 fs-6">Dolleq 球體關節人形</div>
-    </h1>
-  </header>
+      <article class="mt-3">
+        <div lang="en">Dolleq creates ball-jointed dolls and tutorials</div>
+        <div>Dolleq 提供球體關節人形創作和教學</div>
+      </article>
 
-  <div class="carousel slide carousel-fade mt-3" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <picture>
-          <source srcset="katiat-enghim.avif">
-          <img src="katiat-enghim.jpg" width="100%" alt="Katiat and Enghim the Ball-jointed dolls" />
-        </picture>
+      <div>
+        <div class="mt-4 fs-3"><span lang="en">Contact</span> 聯絡</div>
+        <div class="d-grid gap-2 d-lg-block">
+          <a role="button" class="btn btn-light btn-lg" href="https://www.messenger.com/t/dolleq"><i class="fa-brands fa-facebook-messenger"></i> Messenger</a>
+          <a role="button" class="btn btn-light btn-lg" href="https://line.me/R/ti/p/%40345aqamv"><i class="fa-brands fa-line"></i> LINE</a>
+        </div>
+
+        <div class="mt-4 fs-3"><span lang="en">Social Media</span> 社群媒體</div>
+        <div class="d-grid gap-2 d-lg-block">
+          <a role="button" class="btn btn-light btn-lg" href="https://www.youtube.com/dolleq"><i class="fa-brands fa-youtube"></i> YouTube</a>
+          <a role="button" class="btn btn-light btn-lg" href="https://www.instagram.com/dolleqworkshop/"><i class="fa-brands fa-instagram"></i> Instagram</a>
+          <a role="button" class="btn btn-light btn-lg" href="https://facebook.com/qr?id=100064126143922"><i class="fa-brands fa-facebook"></i> Facebook</a>
+          <a role="button" class="btn btn-light btn-lg" href="https://twitter.com/dolleqworkshop"><i class="fa-brands fa-twitter"></i> Twitter</a>
+          <a role="button" class="btn btn-light btn-lg" href="https://www.behance.net/zincaluminum"><i class="fa-brands fa-behance"></i> Behance</a>
+        </div>
+
+        <div class="mt-4 fs-3"><span lang="en">Shop</span> 商店</div>
+        <div class="d-grid gap-2 d-lg-block">
+          <a role="button" class="btn btn-light btn-lg" href="https://www.ruten.com.tw/store/dolleq">露天拍賣</a>
+          <a role="button" class="btn btn-light btn-lg" href="https://shopee.tw/dolleq">蝦皮購物</a>
+        </div>
+
+        <div class="mt-4 fs-3"><span lang="en">Commission</span> 委託</div>
+        <div class="d-grid gap-2 d-lg-block">
+          <a role="button" class="btn btn-light btn-lg" href="https://clibo.tw/users/w2dCr4">Clibo</a>
+        </div>
       </div>
-      <div class="carousel-item">
-        <picture>
-          <source srcset="enghim.avif">
-          <img src="enghim.jpg" width="100%" alt="Enghim the Ball-jointed doll" />
-        </picture>
-      </div>
-      <div class="carousel-item">
-        <picture>
-          <source srcset="katiat.avif">
-          <img src="katiat.jpg" width="100%" alt="Katiat the Ball-jointed doll" />
-        </picture>
-      </div>
-    </div>
-  </div>
+    </main>
 
-  <main>
-
-    <article class="mt-3">
-      <div lang="en">Dolleq creates ball-jointed dolls and tutorials</div>
-      <div>Dolleq 提供球體關節人形創作和教學</div>
-    </article>
-
-    <div>
-      <div class="mt-4 fs-3"><span lang="en">Contact</span> 聯絡</div>
-      <div class="d-grid gap-2 d-md-block">
-        <a role="button" class="btn btn-light btn-lg" href="https://www.messenger.com/t/dolleq"><i
-            class="fa-brands fa-facebook-messenger"></i> Messenger</a>
-        <a role="button" class="btn btn-light btn-lg" href="https://line.me/R/ti/p/%40345aqamv"><i
-            class="fa-brands fa-line"></i> LINE</a>
-      </div>
-
-      <div class="mt-4 fs-3"><span lang="en">Social Media</span> 社群媒體</div>
-      <div class="d-grid gap-2 d-md-block">
-        <a role="button" class="btn btn-light btn-lg" href="https://www.youtube.com/dolleq"><i
-            class="fa-brands fa-youtube"></i> YouTube</a>
-        <a role="button" class="btn btn-light btn-lg" href="https://www.instagram.com/dolleqworkshop/"><i
-            class="fa-brands fa-instagram"></i> Instagram</a>
-        <a role="button" class="btn btn-light btn-lg" href="https://facebook.com/qr?id=100064126143922"><i
-            class="fa-brands fa-facebook"></i> Facebook</a>
-        <a role="button" class="btn btn-light btn-lg" href="https://twitter.com/dolleqworkshop"><i
-            class="fa-brands fa-twitter"></i> Twitter</a>
-        <a role="button" class="btn btn-light btn-lg" href="https://www.behance.net/zincaluminum"><i
-            class="fa-brands fa-behance"></i> Behance</a>
-      </div>
-
-      <div class="mt-4 fs-3"><span lang="en">Shop</span> 商店</div>
-      <div class="d-grid gap-2 d-md-block  ">
-        <a role="button" class="btn btn-light btn-lg" href="https://www.ruten.com.tw/store/dolleq">露天拍賣</a>
-        <a role="button" class="btn btn-light btn-lg" href="https://shopee.tw/dolleq">蝦皮購物</a>
-      </div>
-
-      <div class="mt-4 fs-3"><span lang="en">Commission</span> 委託</div>
-      <div class="d-grid gap-2 d-md-block  ">
-        <a role="button" class="btn btn-light btn-lg" href="https://clibo.tw/users/w2dCr4">Clibo</a>
-      </div>
-
-    </div>
-  </main>
-
-  <footer class="mt-5 mb-5">
-    <div>
-      © Dolleq. Based in Keelung.
-      </div>
-  </footer>
-
-  <link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" as="style"
-    onload="this.onload=null;this.rel='stylesheet'" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-
-</body>
-
+    <footer class="mt-5 mb-5">
+      <div>© Dolleq | Based in Keelung, Formosa (Taiwan)</div>
+    </footer>
+  </body>
 </html>
