--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
     <meta property="og:url" content="https://dolleq.com" />
     <meta property="og:image" content="https://dolleq.com/katiat-enghim.jpg" />
     <meta property="og:description" content="Dolleq creates ball-jointed dolls and tutorials. Dolleq 提供球體關節人形創作和教學。" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/fontawesome.min.css" />
-    <link rel="stylesheet" href="css/brands.min.css" />
+    <link rel="stylesheet" media="screen" href="css/style.css" />
+    <link rel="stylesheet" media="screen" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" media="screen" href="css/fontawesome.min.css" />
+    <link rel="stylesheet" media="screen" href="css/brands.min.css" />
   </head>
 
   <body class="body container fs-6 text-center">
     <header>
       <h1>
-        <img class="mt-4" src="logo.png" width="100px" height="50px" srcset="logo.png, logo-2x.png 2x" alt="Dolleq" />
+        <img id="logo" class="mt-4" src="logo.png" srcset="logo.png, logo-2x.png 2x" alt="Dolleq" />
       </h1>
     </header>
 
     <main>
       <picture class="mt-3">
         <source srcset="katiat-enghim.avif" />
-        <img src="katiat-enghim.jpg" width="100%" alt="Katiat and Enghim the Ball-jointed dolls" />
+        <img src="katiat-enghim.jpg" alt="Katiat and Enghim the Ball-jointed dolls" />
       </picture>
 
       <article class="mt-3">
