--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" media="screen" href="css/bootstrap.min.css" />
     <link rel="stylesheet" media="screen" href="css/fontawesome.min.css" />
     <link rel="stylesheet" media="screen" href="css/brands.min.css" />
+    <link rel="preload" href="webfonts/fa-brands-400.woff2" as="font" type="font/woff2" crossorigin>
   </head>
 
   <body class="body container fs-6 text-center">
